20210920_formation_devops_online/Ingress/Ingress-LB-nginx/deployment_lb-server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 'nginx-lb-server'
spec:
  selector:
    matchLabels:
       app: 'nginx-lb'
  template:
    metadata:
      labels:
        app: 'nginx-lb'
        zone: 'fr'
    spec:
      containers:
      - name: nginx
        image:  dockernassimchet/nginx
        imagePullPolicy: IfNotPresent
      

        #command: ["/bin/chmod -R 777 /etc/nginx/"]
        ports:
        - containerPort: 80
        volumeMounts:
        #- name: config-volume-5000
        - mountPath: /etc/nginx/ #custom 
          readOnly: true
          name: nginx-config-lb-server
         
        #command: ["/bin/bash"]
        #args: ["-c", "echo", "SUCCESS"] #"service nginx stop;",  "service nginx reload;", "service nginx start;"]  
      
      - name: nginx-5000
        image:  dockernassimchet/nginx
        imagePullPolicy: IfNotPresent
        volumeMounts:
        #- mountPath: /usr/share/nginx/html
        #  name: config-volume-5000
          
        - mountPath: /etc/nginx/ #custom 
          readOnly: true
          name: config-volume-5000
     

      volumes:
      
      - name: nginx-config-lb-server
        configMap:
          name: nginx-config-lb-server
          items:
          - key: "nginx_conf"
            path: "nginx.conf"
      
      - name: config-volume-5000
        configMap:
          name: nginx-config-5000
          items:
          - key: "nginx_conf_5000"
            path: "nginx.conf"


---
