20210920_formation_devops_online/Ingress/Ingress-LB-nginx/serviceIp.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: lb-server-service
  labels:
    app: nginx
spec:
  ports:
    - name: "http"
      protocol: TCP
      port: 80
      targetPort: 80
  clusterIP: None
  selector:
    app: nginx-lb
    zone: 'fr'
---
